<resources>
    <string name="app_name">Neighbourly_Clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">POST</string>
    <string name="hello_fragment">Hello Fragment</string>
    <string name="welcome_back_to_munnekollal">Welcome back to Munnekollal</string>
    <string name="anupam">Anupam</string>
    <string name="_4_days_ago">4 days ago</string>
    <string name="bengaluru">Bengaluru</string>
    <string name="textview">TextView</string>
    <string name="new_delhi">New Delhi</string>
    <string name="remove">Remove</string>
    <string name="_2_likes">2 likes</string>
    <string name="comment">COMMENT</string>
    <string name="photo">Photo</string>
    <string name="tip">Tip</string>
    <string name="event">Event</string>
    <string name="question">Question</string>
    <string name="what_do_you_want_to_post">What do you want to post ?</string>
    <string name="poll">Poll</string>
    <string name="close_button">Close Button</string>
    <string name="change_neighbourhood">Change Neighbourhood</string>
    <string name="add_neighbourhood">Add Neighbourhood</string>
    <string name="munnekollal">Munnekollal</string>
</resources>