<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recyclercard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    app:cardCornerRadius="25dp"
   android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:padding="5dp"
    >



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/recyclerimage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/scenery"
                android:scaleType="centerCrop"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/recyclerprofile_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/user"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerimage" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:hint="@string/anupam"
                app:layout_constraintLeft_toRightOf="@id/recyclerprofile_image"
                app:layout_constraintTop_toTopOf="@+id/recyclerprofile_image" />

            <TextView
                android:id="@+id/timeago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/_4_days_ago"
                app:layout_constraintStart_toEndOf="@+id/name"
                app:layout_constraintTop_toTopOf="@+id/name" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableLeft="@drawable/location"
                android:hint="@string/bengaluru"
                app:layout_constraintBottom_toBottomOf="@+id/recyclerprofile_image"
                app:layout_constraintStart_toEndOf="@+id/recyclerprofile_image" />

            <TextView
                android:id="@+id/titleorquestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_horizontal"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textColor="@color/purple_200"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.436"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerprofile_image" />


            <View
                android:id="@+id/dividerquestionasnwer"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:backgroundTint="@color/purple_700"
                android:background="?android:attr/listDivider"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleorquestion"
                android:layout_marginHorizontal="5dp"
                android:layout_margin="10dp"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/recycleranswer_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/user"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dividerquestionasnwer" />

            <TextView
                android:id="@+id/answername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:text="Rohit"
                app:layout_constraintStart_toEndOf="@+id/recycleranswer_image"
                app:layout_constraintTop_toTopOf="@+id/recycleranswer_image" />

            <TextView
                android:id="@+id/answerdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="5 days ago"
                app:layout_constraintStart_toEndOf="@+id/answername"
                app:layout_constraintTop_toTopOf="@+id/answername" />

            <TextView
                android:id="@+id/firstanswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_marginLeft="3dp"
                android:background="@color/teal_200"
                android:text="FIRST ANSWER"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:padding="2dp"
                app:layout_constraintStart_toEndOf="@+id/answerdate"
                app:layout_constraintTop_toTopOf="@+id/answerdate" />

            <TextView
                android:id="@+id/answerlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="11dp"
                android:drawableLeft="@drawable/location"
                android:hint="New Delhi"
                app:layout_constraintBottom_toBottomOf="@+id/recycleranswer_image"
                app:layout_constraintStart_toEndOf="@+id/recycleranswer_image" />

            <TextView
                android:id="@+id/questionanswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_200"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/recycleranswer_image" />


            <TextView
                android:id="@+id/answercount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="2 Answers"
                app:layout_constraintHorizontal_bias="0.941"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/questionanswer" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/answercount" />

            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/rating"
                android:drawablePadding="6dp"
                android:text="Save"
                android:textColor="#8A80FF"
                android:textSize="15sp"
                android:padding="5dp"
                app:layout_constraintEnd_toStartOf="@+id/like"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/like"
                android:drawablePadding="6dp"
                android:text="Like"
                android:padding="5dp"
                android:textColor="#8A80FF"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/answer"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/save"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/answers"
                android:drawablePadding="6dp"
                android:padding="5dp"
                android:text="Answer"
                android:textColor="#8A80FF"
                android:textSize="15sp"
                android:background="@drawable/buttonbackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/like"
                app:layout_constraintTop_toBottomOf="@+id/divider" />


        </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.cardview.widget.CardView>